--- a/MyResponse/Base.lproj/Main.storyboard
+++ b/MyResponse/Base.lproj/Main.storyboard
@@ -74,6 +74,10 @@
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="yNG-tb-m4Q"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="RgZ-wL-SYB"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -126,8 +130,8 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="250"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3E5-Se-3nQ">
-                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="250"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="3E5-Se-3nQ">
+                                                    <rect key="frame" x="0.0" y="1" width="414" height="247.5"/>
                                                 </imageView>
                                             </subviews>
                                             <constraints>
@@ -415,4 +419,7 @@
     <inferredMetricsTieBreakers>
         <segue reference="nVB-aT-XaY"/>
     </inferredMetricsTieBreakers>
+    <resources>
+        <image name="photo" catalog="system" width="128" height="93"/>
+    </resources>
 </document>
