--- a/MyResponse/Base.lproj/Main.storyboard
+++ b/MyResponse/Base.lproj/Main.storyboard
@@ -148,17 +148,17 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="75"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="7Ip-Wz-xC5">
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="7Ip-Wz-xC5">
                                                     <rect key="frame" x="15" y="7" width="384" height="61"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Название" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hpr-mN-zCq">
-                                                            <rect key="frame" x="0.0" y="0.0" width="384" height="31"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="384" height="28"/>
                                                             <fontDescription key="fontDescription" name="AppleSDGothicNeo-Thin" family="Apple SD Gothic Neo" pointSize="20"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="bottom" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="I03-4y-TWE">
-                                                            <rect key="frame" x="0.0" y="36" width="384" height="25"/>
+                                                            <rect key="frame" x="0.0" y="33" width="384" height="28"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                         </textField>
@@ -184,19 +184,19 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="75"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="2iR-Jq-dA8">
+                                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="2iR-Jq-dA8">
                                                     <rect key="frame" x="15" y="7" width="369" height="61"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Оценка" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AjY-Oy-7XH">
-                                                            <rect key="frame" x="0.0" y="0.0" width="83" height="61"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="109" height="61"/>
                                                             <fontDescription key="fontDescription" name="AppleSDGothicNeo-SemiBold" family="Apple SD Gothic Neo" pointSize="25"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="qVW-W1-p3B">
-                                                            <rect key="frame" x="111" y="0.0" width="260" height="62"/>
+                                                            <rect key="frame" x="127" y="0.0" width="244" height="62"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="width" constant="256" id="Dw3-b6-kDG"/>
+                                                                <constraint firstAttribute="width" constant="240" id="Dw3-b6-kDG"/>
                                                             </constraints>
                                                             <connections>
                                                                 <action selector="changeMarkAction:" destination="1IR-nv-HdN" eventType="valueChanged" id="Hfb-je-1sl"/>
@@ -220,17 +220,17 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="75"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="M3O-Ce-EgE">
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="M3O-Ce-EgE">
                                                     <rect key="frame" x="15" y="7" width="384" height="61"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Краткое описание" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qHr-en-6Os">
-                                                            <rect key="frame" x="0.0" y="0.0" width="384" height="31"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="384" height="28"/>
                                                             <fontDescription key="fontDescription" name="AppleSDGothicNeo-Thin" family="Apple SD Gothic Neo" pointSize="20"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="bottom" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Xvn-l7-acX">
-                                                            <rect key="frame" x="0.0" y="36" width="384" height="25"/>
+                                                            <rect key="frame" x="0.0" y="33" width="384" height="28"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                         </textField>
@@ -315,6 +315,63 @@
                 <exit id="eM7-Rb-WhK" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1853.6231884057972" y="129.91071428571428"/>
+        </scene>
+        <!--Page View Controller-->
+        <scene sceneID="g5o-QV-NfO">
+            <objects>
+                <pageViewController storyboardIdentifier="PageViewController" autoresizesArchivedViewToFullSize="NO" modalPresentationStyle="fullScreen" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="lbp-7y-J7v" customClass="PageViewController" customModule="MyResponse" customModuleProvider="target" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="spM-D1-tuB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2693" y="130"/>
+        </scene>
+        <!--Slids View Controller-->
+        <scene sceneID="TuV-4z-ikq">
+            <objects>
+                <viewController storyboardIdentifier="SlidsViewController" modalPresentationStyle="fullScreen" id="20t-jk-fcp" customClass="SlidsViewController" customModule="MyResponse" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="QaX-l6-eOj">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3DH-Pp-mkc">
+                                <rect key="frame" x="50" y="144" width="314" height="24"/>
+                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Light" family="Apple SD Gothic Neo" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pencil.and.ellipsis.rectangle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Cwa-NZ-7yi">
+                                <rect key="frame" x="107" y="372" width="200" height="348.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="350" id="E2Z-jF-FlI"/>
+                                    <constraint firstAttribute="width" constant="200" id="vdq-xo-KsO"/>
+                                </constraints>
+                            </imageView>
+                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="n0v-Cr-lgI">
+                                <rect key="frame" x="187.5" y="795" width="39" height="37"/>
+                                <color key="pageIndicatorTintColor" systemColor="systemGray4Color" red="0.81960784310000001" green="0.81960784310000001" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="currentPageIndicatorTintColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </pageControl>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="3DH-Pp-mkc" firstAttribute="top" secondItem="XKd-q3-hsQ" secondAttribute="top" constant="100" id="2jg-uv-12y"/>
+                            <constraint firstItem="XKd-q3-hsQ" firstAttribute="bottom" secondItem="n0v-Cr-lgI" secondAttribute="bottom" constant="30" id="DD0-8m-zK3"/>
+                            <constraint firstItem="n0v-Cr-lgI" firstAttribute="centerX" secondItem="XKd-q3-hsQ" secondAttribute="centerX" id="F4T-Qb-ZrC"/>
+                            <constraint firstItem="3DH-Pp-mkc" firstAttribute="leading" secondItem="XKd-q3-hsQ" secondAttribute="leading" constant="50" id="ZQo-QT-Nf5"/>
+                            <constraint firstItem="Cwa-NZ-7yi" firstAttribute="leading" secondItem="XKd-q3-hsQ" secondAttribute="leading" constant="107" id="cCb-1I-wYG"/>
+                            <constraint firstItem="XKd-q3-hsQ" firstAttribute="trailing" secondItem="3DH-Pp-mkc" secondAttribute="trailing" constant="50" id="y0A-le-Yy9"/>
+                            <constraint firstItem="XKd-q3-hsQ" firstAttribute="bottom" secondItem="Cwa-NZ-7yi" secondAttribute="bottom" constant="140" id="yjo-Qg-boE"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="XKd-q3-hsQ"/>
+                    </view>
+                    <connections>
+                        <outlet property="imageSlids" destination="Cwa-NZ-7yi" id="LX7-z9-yaK"/>
+                        <outlet property="pages" destination="n0v-Cr-lgI" id="ejA-ID-X3O"/>
+                        <outlet property="textLabel" destination="3DH-Pp-mkc" id="Dzp-Pj-EKK"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4Y7-8X-kMn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3397" y="130"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="5jy-Ph-71k">
@@ -486,6 +543,7 @@
     </inferredMetricsTieBreakers>
     <resources>
         <image name="arrowshape.turn.up.left" catalog="system" width="128" height="106"/>
+        <image name="pencil.and.ellipsis.rectangle" catalog="system" width="128" height="81"/>
         <image name="photo" catalog="system" width="128" height="93"/>
     </resources>
 </document>
