--- a/MyResponse/Base.lproj/Main.storyboard
+++ b/MyResponse/Base.lproj/Main.storyboard
@@ -129,8 +129,8 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="250"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="3E5-Se-3nQ">
-                                                    <rect key="frame" x="0.0" y="1" width="414" height="247.5"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="nothing" translatesAutoresizingMaskIntoConstraints="NO" id="3E5-Se-3nQ">
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="250"/>
                                                 </imageView>
                                             </subviews>
                                             <constraints>
@@ -281,6 +281,22 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="75" id="kWT-lq-s5T">
+                                        <rect key="frame" x="0.0" y="578" width="414" height="75"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="kWT-lq-s5T" id="qnE-US-K5z">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="75"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ofs-bt-qhf">
+                                                    <rect key="frame" x="56" y="20" width="302" height="34"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
                                 </cells>
                             </tableViewSection>
                         </sections>
@@ -346,12 +362,11 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="3DH-Pp-mkc" firstAttribute="top" secondItem="XKd-q3-hsQ" secondAttribute="top" constant="391" id="1Lg-ay-tsm"/>
                             <constraint firstItem="XKd-q3-hsQ" firstAttribute="bottom" secondItem="n0v-Cr-lgI" secondAttribute="bottom" constant="30" id="DD0-8m-zK3"/>
-                            <constraint firstItem="3DH-Pp-mkc" firstAttribute="centerY" secondItem="XKd-q3-hsQ" secondAttribute="centerY" id="ESi-Ky-g3x"/>
                             <constraint firstItem="n0v-Cr-lgI" firstAttribute="centerX" secondItem="XKd-q3-hsQ" secondAttribute="centerX" id="F4T-Qb-ZrC"/>
-                            <constraint firstItem="3DH-Pp-mkc" firstAttribute="leading" secondItem="XKd-q3-hsQ" secondAttribute="leading" constant="50" id="ZQo-QT-Nf5"/>
-                            <constraint firstItem="3DH-Pp-mkc" firstAttribute="centerX" secondItem="XKd-q3-hsQ" secondAttribute="centerX" id="mEb-nd-4TT"/>
-                            <constraint firstItem="XKd-q3-hsQ" firstAttribute="trailing" secondItem="3DH-Pp-mkc" secondAttribute="trailing" constant="50" id="y0A-le-Yy9"/>
+                            <constraint firstItem="3DH-Pp-mkc" firstAttribute="leading" secondItem="XKd-q3-hsQ" secondAttribute="leading" constant="50" id="HNL-DC-ymw"/>
+                            <constraint firstItem="3DH-Pp-mkc" firstAttribute="centerX" secondItem="n0v-Cr-lgI" secondAttribute="centerX" id="fh2-BX-bNP"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="XKd-q3-hsQ"/>
                     </view>
@@ -470,7 +485,7 @@
                     <navigationItem key="navigationItem" id="qJ6-f1-TqT">
                         <barButtonItem key="leftBarButtonItem" image="arrowshape.turn.up.left" catalog="system" id="8da-HH-FrU">
                             <connections>
-                                <action selector="goBack:" destination="fz0-z7-RGm" id="MMa-1m-VJ4"/>
+                                <segue destination="tT9-9v-PeJ" kind="unwind" unwindAction="unwindSegue:" id="20u-eG-byk"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Стандартный цвет" id="a36-Hs-mT2">
@@ -489,6 +504,7 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1Lh-we-K2D" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="tT9-9v-PeJ" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1957.9710144927537" y="853.79464285714278"/>
         </scene>
@@ -534,6 +550,6 @@
     </inferredMetricsTieBreakers>
     <resources>
         <image name="arrowshape.turn.up.left" catalog="system" width="128" height="106"/>
-        <image name="photo" catalog="system" width="128" height="93"/>
+        <image name="nothing" width="900" height="900"/>
     </resources>
 </document>
